feat: implement full internationalization support across application pages and components